fixes gap in favorites nav menu

--- a/src/App.css
+++ b/src/App.css
@@ -69,3 +69,7 @@ button {
 form {
   padding-top: 10px;
 }
+
+.top-padding {
+  padding-top: 15px;
+}
